# multires

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  README.md  dirtree.md  loc.ps1  plot_benchmark_result.py  plot_mesh_error.py  renderer.toml  vulkaninfo.txt
.config/: config.toml
ash_renderer/: Cargo.toml  README.md  build.rs
ash_renderer/shaders/spv/: mesh-shader.frag.spv  mesh-shader.mesh.spv
ash_renderer/shaders/src/: allocate_index_ranges.comp  clear_indirect_draw_data.comp  cluster_data.glsl  compact_indices.comp  egui_vert.vert  expanding_compact_indices.comp  expanding_should_draw.comp  expanding_should_draw_indices.comp  frag_colour.frag  frag_pbr.frag  mesh-shader.frag  mesh-shader.mesh  mesh-shader.task  mesh_frag_payload.glsl  mesh_shader_compute_cull.mesh  mesh_shader_compute_cull.task  mesh_task_payload.glsl  mesh_tri_strip.mesh  pbr_shader.frag  should_draw.comp  transforms.glsl  vert.vert
ash_renderer/shaders/src/structs/: camera.glsl  cluster_data.glsl  indirect_dispatch_data.glsl  indirect_draw_data.glsl  mesh_frag_payload.glsl  mesh_task_payload.glsl  meshlet.glsl  model.glsl  range.glsl  vertex.glsl
ash_renderer/shaders/src/util/: cluster.glsl  culling.glsl  traverse_select_template.glsl
ash_renderer/src/: core.rs  draw_pipelines.rs  lib.rs  main.rs  multires.rs  screen.rs  spiral.rs  utility.rs  vertex.rs
ash_renderer/src/app/: app.rs  benchmarker.rs  draw_systems.rs  fps_limiter.rs  frame_measure.rs  material.rs  mesh_data.rs  mod.rs  recorder.rs  renderer.rs  scene.rs  window.rs
ash_renderer/src/app/eval/: mod.rs  random_benchmarker.rs  recorder.rs  scene_complexity_benchmarker.rs  zoom_benchmarker.rs
ash_renderer/src/components/: benchmarker.rs  mod.rs
ash_renderer/src/draw_pipelines/: compute_culled_indices.rs  compute_culled_mesh.rs  draw_full_res.rs  draw_indirect.rs  draw_lod_chain.rs  expanding_compute_culled_indices.rs  expanding_compute_culled_mesh.rs  indirect_tasks.rs  mod.rs  render_multires.rs  render_multires_indices.rs  render_multires_meshlets.rs  stub.rs
ash_renderer/src/gui/: allocator_visualiser_window.rs  gpu_allocator.rs  gui.rs  integration.rs  mod.rs  utils.rs  window.rs
ash_renderer/src/utility/: buffer.rs  command_pool.rs  constants.rs  debug.rs  descriptor_pool.rs  device.rs  extensions.rs  image.rs  instance.rs  macros.rs  mod.rs  physical_device.rs  pipeline.rs  platforms.rs  pools.rs  render_pass.rs  screen.rs  structures.rs  surface.rs  swapchain.rs  sync.rs  tools.rs  window.rs
ash_renderer/src/utility/pooled/: command_buffer_group.rs  command_buffer_writer.rs  command_pool.rs  descriptor_pool.rs  instant_command_buffer.rs  mod.rs  query_pool.rs
ash_renderer/src/utility/share/: mod.rs  v1.rs  v2.rs
assets/: dragon_high.glb.bin.txt  lucy.glb.bin.txt  monk_60k.glb.bin.txt  sphere.glb.bin.txt  torrin_main.glb.bin.txt
assets/baker_lod/: monk_60k.glb.bin.txt  sphere.glb.bin.txt
assets/meshopt_lod/: monk_60k.glb.bin.txt  sphere.glb.bin.txt
baker/: Cargo.toml
baker/benches/: bench_pidge.rs
baker/src/: lib.rs  main.rs  mesh.rs  mesh_iter.rs  pidge.rs  vertex.rs  winged_mesh.rs
baker/src/evaluation/: evaluation_mesh_error.rs  line.rs  mod.rs  triangle.rs
baker/src/lod/: lod_chain.rs  meshopt_chain.rs  meshopt_multiresolution.rs  mod.rs  multiresolution.rs
baker/src/mesh/: cluster_info.rs  edge.rs  face.rs  graph.rs  group_info.rs  half_edge_mesh.rs  iter.rs  line.rs  mod.rs  partition.rs  pidge.rs  plane.rs  quadric.rs  quadric_error.rs  reduction.rs  triangle.rs  vertex.rs  winged_mesh.rs
baker/tests/: tests.rs
common/: Cargo.toml
common/src/: asset.rs  bounding_sphere.rs  graph.rs  lib.rs  mesh_cluster.rs  mesh_vert.rs  meshlet.rs  multi_res_mesh.rs  origin_cone.rs  tri_mesh.rs  vec3.rs
common_renderer/: Cargo.toml
common_renderer/src/: components.rs
common_renderer/src/components/: camera.rs  camera_controller.rs  gpu_mesh_util.rs  mod.rs  transform.rs
common_renderer/src/resources/: time.rs
evaluation/: Cargo.toml  generate_test_meshes.py  plot.py  plot_benchmark_result.py  plot_mesh_error.py
evaluation/src/: evaluation_mesh_error.rs  lib.rs  line.rs  main.rs  triangle.rs
metis/: Cargo.toml  build.rs  wrapper.h
metis/src/: graph.rs  lib.rs  partition.rs
renderer/: Cargo.toml
renderer/src/: main.rs  vertex.rs
renderer/src/components/: camera.rs  camera_controller.rs  camera_uniform.rs  debug_mesh.rs  gpu_multi_res_mesh.rs  mesh.rs  mod.rs  multi_res_mesh.rs
renderer/src/core/: app.rs  buffer.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs
renderer/src/gui/: gui.rs  mod.rs  partition_graph.rs
renderer/src/shaders/: compact_indices.wgsl  pbr_shader.wgsl  shader.wgsl  shader_wire.wgsl  should_draw.wgsl
renderer_bevy/: Cargo.toml
renderer_bevy/assets/shaders/: game_of_life.wgsl
renderer_bevy/src/: main.rs
vk_renderer/: Cargo.toml
vk_renderer/src/: main.rs  vertex.rs
vk_renderer/src/components/: camera.rs  camera_uniform.rs  mesh.rs  mod.rs  transform.rs
vk_renderer/src/core/: app.rs  buffer.rs  instance.rs  mesh_pipeline.rs  mod.rs  renderer.rs  texture.rs
vk_renderer/src/shaders/: shader.wgsl
