[workspace]
members = [
	"metis",
	"common",
	"baker",
	"common_renderer",
	"renderer",
	"vk_renderer",
]
resolver = "2"

[workspace.package]
authors = ["mp2015@cam.ac.uk"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
glam = { version = "0.24.1", features = ["bytemuck"] }
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
gltf = "1.3"
petgraph.workspace = true
