[workspace]
members = [
	"metis",
	"common",
	"baker",
	"common_renderer",
	"renderer",
	# "vk_renderer",
	# "ash_renderer",
]
resolver = "2"

[workspace.package]
authors = ["mp2015@cam.ac.uk"]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
glam = { version = "0.24.1", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
gltf = "1.3"
petgraph = "0.6"
bevy_ecs = "0.12"
winit = "0.28"
pollster = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
debug = true

[profile.dev.package."*"]
debug = false
# opt-level = 1
