[workspace]
members = [
	"metis",
	"common",
	"baker",
	"common_renderer",
	# "renderer",
	# "renderer_bevy",
	# "vk_renderer",
	"evaluation",
	"ash_renderer",
]
resolver = "2"

[workspace.package]
authors = ["mp2015@cam.ac.uk"]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
glam = { version = "0.25", features = [
	"bytemuck",
	"serde",
	"mint",
	"glam-assert",
] }
mint = "0.5"
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
gltf = "1.3"
petgraph = { version = "0.6", default-features = false }
bevy_ecs = "0.12"
winit = "0.29"
pollster = "0.3"
anyhow = "1.0"
thiserror = "1.0"
crevice = { version = "0.14" }
clap = { version = "4.4", features = ["derive"] }
common = { path = "common" }
common_renderer = { path = "common_renderer" }
ash_renderer = { path = "ash_renderer" }
baker = { path = "baker" }
metis = { path = "metis" }


# [profile.release]
# opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.opt-with-debug]
inherits = "release"
opt-level = 1
debug = true


[profile.dev.package."*"]
debug = false
