[package]
name = "ash_renderer"
version.workspace = true
edition.workspace = true

[features]
default = ["shaderc"]
shaderc = ["dep:shaderc"]

[dependencies]
winit.workspace = true
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
pollster.workspace = true
bevy_ecs.workspace = true
common = { path = "../common" }
common_renderer = { path = "../common_renderer" }
ash = { version = "0.37", default-features = false, features = [
	"linked",
	"debug",
] }
ash-window = "0.12"
raw-window-handle = "0.5"
memoffset = "0.9"
num = "0.4"
image = "0.22"
egui = "0.23"
gpu-allocator = { version = "0.24.0", default-features = false, features = [
	"vulkan",
	"visualizer",
] }
egui-winit-ash-integration = { version = "0.6.0" }
anyhow.workspace = true

[build-dependencies]
shaderc = { version = "0.8", optional = true }


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
