[package]
name = "ash_renderer"
version.workspace = true
edition.workspace = true

[features]
default = ["shaderc"]
shaderc = ["dep:shaderc"]

[dependencies]
winit.workspace = true
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
pollster.workspace = true
bevy_ecs.workspace = true
common.workspace = true
common_renderer.workspace = true
ash = { version = "0.38", default-features = false, features = [
	"linked",
	"debug",
] }
ash-window = "0.13"
raw-window-handle = "0.6"
memoffset = "0.9"
num = "0.4"
rand = "0.8"
image = "0.22"
egui = "0.27"
egui_plot = "0.27"
egui-winit = { version = "0.27", default-features = false }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.38", default-features = false, features = [
	"vulkan",
	"visualizer",
] }
# egui-winit-ash-integration = { version = "0.6.0" }
anyhow.workspace = true
chrono = "0.4"
toml = "0.8"
serde = "1.0"
rayon = "1.10"

[build-dependencies]
shaderc = { version = "0.8", optional = true }
