[package]
name = "baker"
version.workspace = true
edition.workspace = true

[features]
default = ["progress"]
progress = ["dep:indicatif"]

[dependencies]
metis = { path = "../metis" }
common = { path = "../common" }
petgraph.workspace = true
glam.workspace = true
idmap = "0.2"
rand = "0.8"
bytemuck.workspace = true
priority-queue = "1.3"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"], optional = true}