[package]
name = "baker"
version.workspace = true
edition.workspace = true

[features]
# default = ["progress"]
# progress = ["dep:indicatif"]
debug = []

[dependencies]
metis.workspace = true
common.workspace = true
petgraph.workspace = true
glam.workspace = true
rand = "0.8"
bytemuck.workspace = true
priority-queue = "1.4"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
clap.workspace = true
glob = "0.3"
meshopt.workspace = true
mimalloc = { version = "*", default-features = false }
obj = "0.10"
