[package]
name = "common_renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit = "0.28"
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
pollster = "0.3"
bevy_ecs = "0.11"
common = { path = "../common" }
