[package]
name = "common_renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit.workspace = true
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
pollster.workspace = true
bevy_ecs.workspace = true
petgraph.workspace = true
common = { path = "../common" }
crevice.workspace = true
mint.workspace = true
