[package]
name = "evaluation"
version.workspace = true
edition.workspace = true

[features]
# default = ["progress"]
# progress = ["dep:indicatif"]
debug = []

[dependencies]
common.workspace = true
baker.workspace = true
petgraph.workspace = true
glam.workspace = true
rand = "0.8"
bytemuck.workspace = true
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
clap.workspace = true
glob = "0.3"
kdtree = "0.7.0"
gltf.workspace = true
mimalloc = { version = "*", default-features = false }
obj = "0.10"
