[package]
name = "metis"
version = "5.1.0"
edition.workspace = true


[dependencies]
log = "0.4"
cxx = "1.0"
thiserror.workspace = true
petgraph.workspace = true
common = { path = "../common" }

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
cxx-build = "1.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
