[package]
name = "renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit = "0.28"
wgpu = "0.17"
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
pollster = "0.3"
bevy_ecs = "0.11"
common = { path = "../common" }
common_renderer = { path = "../common_renderer" }
egui = "0.23.0"
egui-wgpu = { version = "0.23", features = ["winit"] }
egui-winit = "0.23.0"
egui_node_graph = { path = "../vendor/egui_node_graph/egui_node_graph" }
anyhow = "1.0"
