[package]
name = "renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit.workspace = true
wgpu = "0.17"
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
pollster.workspace = true
bevy_ecs.workspace = true
petgraph.workspace = true
common = { path = "../common" }
common_renderer = { path = "../common_renderer" }
egui = "0.23.0"
egui-wgpu = { version = "0.23", features = ["winit"] }
egui-winit = "0.23.0"
anyhow.workspace = true
crevice.workspace = true
