[package]
name = "vk_renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit = "0.28"
wgpu = "0.17"
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf = "1.3"
pollster = "0.3"
bevy_ecs = "0.11"
common = { path = "../common" }
vulkano = "0.33"
vulkano-win = "0.33"
vulkano-shaders = "0.33"

[profile.dev]
opt-level = 1
