[package]
name = "vk_renderer"
version.workspace = true
edition.workspace = true


[dependencies]
winit.workspace = true
env_logger.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
pollster = "0.3"
bevy_ecs.workspace = true
common = { path = "../common" }
common_renderer = { path = "../common_renderer" }
vulkano = "0.33"
vulkano-win = "0.33"
vulkano-shaders = "0.33"
ash = "0.37"

[profile.dev]
opt-level = 1
